Wed Jul 31 22:04:36 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Fix a typo.
	  Extern  ID ->
	  ExternalID
	        ^^

Wed Jul 31 22:01:36 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Add tests that focus
	  public ID in external ID notation declaration.

Wed Jul 31 22:01:24 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* parse.y: fix build error with bison-3.0.

Wed Jul 31 21:58:53 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Split test patterns.

Wed Jul 31 21:42:33 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Group tests.

Wed Jul 31 21:37:51 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_mixin.rb (TestNotationDecl#test_name):
	  Move to ...
	* test/rexml/test_notationdecl_parsetest.rb
	  (TestNotationDecl#test_name): ... here.

Wed Jul 31 21:37:47 2013  Kouhei Sutou  <kou@cozmixng.org>

Wed Jul 31 21:31:49 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Remove setup because it
	  doesn't share anything with other tests.

Wed Jul 31 21:24:55 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_attributes_mixin.rb: Remove a needless shebang.
	* test/rexml/test_notationdecl_mixin.rb: ditto.
	* test/rexml/test_doctype.rb: ditto.
	* test/rexml/test_xml_declaration.rb: ditto.
	* test/rexml/test_changing_encoding.rb: ditto.

Wed Jul 31 21:20:08 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: remove a needless shebang.

Wed Jul 31 20:11:01 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c (rb_str_rindex): fix bug introduced in r42269.
	  "".rindex("") should return 0.
	  (str_rindex): ditto.

Wed Jul 31 19:55:33 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (MAX_BIG2STR_TABLE_ENTRIES): Use SIZEOF_SIZE_T.
	  (power_cache_get_power0): Add rb_bug call for too bit i argument.